# cedana-image-streamer

./: CONTRIBUTING.md  Cargo.toml  Makefile  cedana-image-streamer
.github/workflows/: build.yml  check.yml  pr.yml  publish.yml  push.yml  release.yml
proto/criu/: core-aarch64.proto  img-streamer.proto  inventory.proto  rpc.proto
scripts/ci/: Makefile  helpers.sh  regression-test.sh  release-summary-slack
src/: capture.rs  cli.rs  comm.rs  connection.rs  extract.rs  image_patcher.rs  lib.rs  main.rs  mmap_buf.rs  poller.rs  semaphore.rs  util.rs
src/image_store/: fs.rs  fs_overlay.rs  fs_parallel.rs  mem.rs  mod.rs
test/regression/: helper.bash  main.bats
tests/: cli_tests.rs  tests.rs
tests/helpers/: criu.rs  util.rs
