[package]
name = "cedana-image-streamer"
version = "0.0.0" # replaced by Makefile
authors = ["Nicolas Viennot <Nicolas.Viennot@twosigma.com>", "Liana Koleva <liana@cedana.ai>"]
description = "Capture and extract CRIU + Cedana images via UNIX pipes"
edition = "2021"
license = "Apache-2.0"

[dependencies]
structopt = { version = "0.3", default-features = false }
anyhow = "1.0"
regex = "1.10"
slab = "0.4"
libc = "0.2"
prost = "0.14"
bytes = "1.11"
nix = { version = "0.31", features = ["socket", "uio", "feature", "poll", "event", "fs", "zerocopy", "mman", "ioctl"] }
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
prost-build = "0.14" # to generate protobuf wrappers

[dev-dependencies]
procinfo = "0.4" # to measure memory usage
crossbeam-utils = "0.8" # for scoped threads
tempfile = "3" # for unique temp directories in tests

[profile.release]
lto = true
codegen-units = 1
